src/pages/pages.css
.project-img {
  width: 100%;
  padding: 5px;
}

.contact-text {
  width: 50%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-items: center;
  text-align: right;
  padding: 40px;
  line-height: 30px;
}

.contact-img {
  width: 40%;
}

.contact-page {
  display: flex;
  flex-wrap: wrap;
}

.set-title {
  padding: 10px;
  padding-left: 50px;
}

.set-director {
  padding-bottom: 20px;
  padding-left: 50px;
}

.set-text {
  padding-bottom: 20px;
  padding-left: 50px;
}

.set-img {
  padding: 50px !important;
}

@media (max-width: 500px) {
  .contact-text {
    width: 100%;
    text-align: center;
    padding: 0px;
    line-height: 30px;
    margin-bottom: 20px;
  }
  .contact-img {
    width: 100%;
    height: 70vw; /* square img */
    object-fit: cover;
  }
  .set-img {
    padding: 0px !important;
  }
  .set-title {
    padding-left: 10px;
  }
  
  .set-director {
    padding-left: 10px;
  }
  
  .set-text {
    padding-left: 10px;
  }
}

